--- a/README.Rmd
+++ b/README.Rmd
@@ -20,12 +20,14 @@ knitr::opts_chunk$set(
 
 The goal of pater is to decompose a given pathname into meaningful tokens that will be later used to construct a regular expression useful when matching an HTTP request to a route handler.
 
-Core to this are **path parameters** which are pieces of text you define in your route handlers, prefixing the name of your parameter with a colon, and that will be filled when a new request comes in, they are useful because they act as identifiers for a given concept you care about.
+Core to this are **path parameters** which are pieces of text you define in your route handlers and that will be filled when a new request comes in, they are useful because they act as identifiers for a given concept you care about.
 
-Path parameters can appear anywhere you want inside a given path, they may share the same segment as in the following image:
+Path parameters can appear *anywhere* you want inside a given path, they may share the same path segment or be next to plain text, given this the following are valid positions for path parameters:
 
-<img src="man/figures/image.svg"/>
-
+- /text/:parameter
+- /text/:parameter1-:parameter2
+- /text1/:parameter1/text2{.:parameter2}
+- /text1/*parameter
 
 ## Installation
 
